// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: FollowButton renders follow version 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": undefined,
      "borderRadius": 12,
      "height": 32,
      "justifyContent": "center",
      "opacity": 1,
      "padding": 0,
      "width": 83,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          [
            {
              "color": undefined,
            },
            {
              "fontFamily": "Poppins-SemiBold",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "600",
              "letterSpacing": 0.015,
              "lineHeight": 21,
              "textAlign": "left",
            },
          ],
          {
            "color": undefined,
          },
        ]
      }
    >
      <Text
        style={
          [
            [
              {
                "color": undefined,
              },
              {
                "fontFamily": "Poppins-SemiBold",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "600",
                "letterSpacing": 0.04,
                "lineHeight": 16,
                "textAlign": "left",
              },
            ],
            [
              {
                "color": undefined,
                "margin": 0,
                "minWidth": "100%",
                "pading": 0,
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        Follow
      </Text>
    </Text>
  </View>
</View>
`;

exports[`component: FollowButton renders unfollow version 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": undefined,
      "borderColor": undefined,
      "borderRadius": 12,
      "height": 32,
      "justifyContent": "center",
      "opacity": 1,
      "padding": 0,
      "width": 82,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          [
            {
              "color": undefined,
            },
            {
              "fontFamily": "Poppins-SemiBold",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "600",
              "letterSpacing": 0.015,
              "lineHeight": 21,
              "textAlign": "left",
            },
          ],
          {
            "color": undefined,
          },
        ]
      }
    >
      <Text
        style={
          [
            [
              {
                "color": undefined,
              },
              {
                "fontFamily": "Poppins-SemiBold",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "600",
                "letterSpacing": 0.04,
                "lineHeight": 16,
                "textAlign": "left",
              },
            ],
            [
              {
                "color": undefined,
                "margin": 0,
                "minWidth": "100%",
                "padding": 0,
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        Unfollow
      </Text>
    </Text>
  </View>
</View>
`;
